@@ -1,5 +1,6 @@
 *Version 4.2.2*
 * Fix bug in mailing lists that would prevent emails from being sent to them
+* Fix bug where Mango logo was not inserted into email template (Excel reports and Email event handler)
 
 *Version 4.2.1*
 * Add new datapoint permission definition to allow users to vew all data points.
